# game-cpp-sdl

./: CMakeLists.txt  README.md  test.sh
sprite-viewer/: index.php  run.sh
src/: AudioEngine.h  AudioManager.h  BinaryResourceLoader.h  CMakeLists.txt  CacheManager.h  Camera.h  Character.h  CharacterFactory.h  CharacterUtils.h  DeltaTime.h  EnemyFactory.h  EnemyType.h  ExponentialMovingAverage.cpp  ExponentialMovingAverage.h  FrameStepper.h  GameEngine.h  HealthBar.h  Input.h  Intro.h  LevelScript.h  LevelSongPlayer.h  Map.h  MapGenerator.h  MapTileType.h  Menu.h  MouseEventType.h  MovementDirection.h  MovingAverage.cpp  MovingAverage.h  PlayableCharacter.h  Projectile.h  RandomGenerator.h  RenderProps.h  Renderer.h  SDLUtils.h  SineLookupTable.h  StaticSprite.h  TextureManager.h  Timer.h  Utils.h  (+1 more)
src/Audio/: AudioEngine.h  BeatManager.h  MissionSong.h  StageSong.h
src/Font/: FontManager.h  FontStyle.h
src/GameObject/: Alignment.h  BoxCollider.h  ButtonRenderer.h  CharacterHealthBarRenderer.h  CharacterSpriteAnimationRenderer.h  CollisionComponent.h  DebrisFactory.h  GameObject.h  HealthBarRenderer.h  HorizontalSpriteAnimationRenderer.h  IntroRenderer.h  MainMenuBackgroundRenderer.h  MovementComponent.h  RenderComponent.h  ShadowRenderer.h  SplashScreenRenderer.h  SpriteRenderer.h  StatType.h  StatUpgrade.h  StraightMover.h  UiBarRenderer.h  UiGemValueBarRenderer.h  UiHealthBarRenderer.h  UpgradeComponent.h  UpgradeFactory.h  UpgradeId.h  UpgradeType.h
src/GameObject/Character/: Character.h  CharacterFactory.h  CharacterStat.h  CharacterType.h  CharacterUtils.h  LevelManager.h  MainCharacter.h  StatComponent.h  StatType.h
src/GameObject/Character/Weapons/: BossGun.h  FireBallThrower.h  Projectile.h  WeaponComponent.h  WeaponFactory.h  WeaponId.h  WeaponStat.h
src/GameObject/Gem/: Gem.h  GemFactory.h  GemType.h
src/GameObject/Item/: Item.h  ItemFactory.h  ItemId.h
src/GameObject/Movement/: AngledMover.h  MagneticMover.h  MovementComponent.cpp  MovementComponent.h  StraightMover.h  ZigZagMover.h
src/GameObject/Movement/Floating/: FloatingComponent.h  SineFloater.h
src/GameObject/Ui/: Button.h  ButtonState.h  Intro.h  Menu.h  MenuFactory.h  MenuType.h  SplashScreen.h
src/GameObjectRenderers/: CharacterRenderer.h  GameWorldRenderer.h  ProjectileRenderer.h  UIRenderer.h
src/Levels/: LevelScriptFactory.h
src/Maps/: BlockObjectManager.h  MapComponent.h  MapFromImage.h  MapFromImageIsometric.h  RandomMap.h
src/Stages/: SpawnSchedule.h  SpawnScheduleFactory.h
src/StateManager/: GameplayState.h  LevelState.h  MainState.h  StateManager.h
src/Upgrade/: AsciiArt.h  StatUpgrade.h  UpgradeComponent.h  UpgradeFactory.h  UpgradeId.h  UpgradeOption.h  WeaponUpgrade.h
src/Weapons/: FireBallThrower.h  Projectile.h  Sword.h  WeaponComponent.h
src/interfaces/: GameObject.h  ICollidable.h  IRenderable.h  IWeapon.h  Transformable.h
src/weapons/: FireBallThrower.h
tests/: CMakeLists.txt  test_ExponentialMovingAverage.cpp  test_MovingAverage.cpp  test_config.h
